--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,4 +1,10 @@
 source "https://rubygems.org"
-gem 'github-pages', group: :jekyll_plugins
-
 gem "webrick", "~> 1.8"
+
+gem "jekyll", "~> 3.9"
+
+gem "jekyll-paginate", "~> 1.1"
+
+gem "kramdown-parser-gfm", "~> 1.1"
+
+gem "jekyll-serve", "~> 1.0.0.rc1"
