--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ permalink:           pretty
 # About/contact
 author:
   name:              Scourge the Tracker
-  url:
+  url:               https://scourgethetracker.github.io
   email:             scourgethetracker@proton.me
 
 # Gems
@@ -17,5 +17,4 @@ plugins:
   - jekyll-paginate
 
 # Custom vars
-version:             1.1.0
-google_analytics_id: #UA-XXXX-Y
+version:            0.99
