--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,10 +1,9 @@
-source "https://rubygems.org"
-gem "webrick", "~> 1.8"
+source 'https://rubygems.org'
 
-gem "jekyll", "~> 3.9"
+gem 'jekyll'
 
-gem "jekyll-paginate", "~> 1.1"
-
-gem "kramdown-parser-gfm", "~> 1.1"
-
-gem "jekyll-serve", "~> 1.0.0.rc1"
+group :jekyll_plugins do
+  gem "jekyll-sitemap"
+  gem "jekyll-paginate"
+  gem "jemoji"
+end
