--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,12 +8,12 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: ScourgetheTracker # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-github: scourgethetracker # add your Github handle
+social-linkedin: benvanack # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
