--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: ScourgetheTracker # add your name
-author-img: # add your photo
+author-img: scourge_the_tracker_by_wyn83.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
