--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: ScourgetheTracker # add your name
 author-img: scourge_the_tracker_by_wyn83.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author: I'm a developer focusing on back-end development, security, privacy and consuumer digital rights. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: scourgethetracker # add your Github handle
